# avr-toys

./: CMakeLists.txt  README  README.md  toolchain.cmake
assembly/: CMakeLists.txt  README.md
assembly/src/: main.S
hello/: CMakeLists.txt  README.md
hello/include/: config.h.in
hello/src/: main.c
template/: CMakeLists.txt
template/include/: config.h.in
template/src/: main.c
timer/: CMakeLists.txt  README.md
timer/include/: config.h.in  io.h  segments.h  timers.h  utils.h
timer/src/: main.c  segments.c  timers.c  utils.c
tools/: CMakeLists.txt
tools/include/: config.h.in
tools/include/tools/: lcd1602.h  math.h  shiftreg.h  wait.h
tools/src/: lcd1602.c  math.c  shiftreg.S  wait.S
